package rabaza.tfe.model;

public enum UserGender {
    MALE,
    FEMALE
}
