package rabaza.tfe.model;

public enum UserRole {
    ADMIN,
    USER
}
